List of Objects in Collections got replaced with Maps, added Champion info, added skin id, adapted to changes in Core (LoLLoader)